// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculatorStepper component ignores footer when there are no buttons 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class=" css-5f0zb2"
      data-testid="form"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 step-title css-1x9euu8-MuiTypography-root"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-h6 computation css-1nuwz6u-MuiTypography-root"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root MuiTypography-body1 subtitle css-1o02bdp-MuiTypography-root"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth hr css-9mgopn-MuiDivider-root"
      />
    </form>
  </div>
</div>
`;

exports[`CalculatorStepper component renders as a div 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <div>
      <h4
        class="MuiTypography-root MuiTypography-h4 step-title css-1x9euu8-MuiTypography-root"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-h6 computation css-1nuwz6u-MuiTypography-root"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root MuiTypography-body1 subtitle css-1o02bdp-MuiTypography-root"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth hr css-9mgopn-MuiDivider-root"
      />
      <div
        class="footer breakableRow breakableRow--reverse"
      >
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium rowItem css-1ga0prt-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowBackIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Go Back
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium rowItem css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Skip
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium rowItem css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Calculate
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalculatorStepper component renders correctly 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class=" css-5f0zb2"
      data-testid="form"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 step-title css-1x9euu8-MuiTypography-root"
        data-testid="typography"
      >
        This is the 2nd page
      </h4>
      <h6
        class="MuiTypography-root MuiTypography-h6 computation css-1nuwz6u-MuiTypography-root"
        data-testid="typography"
      />
      <p
        class="MuiTypography-root MuiTypography-body1 subtitle css-1o02bdp-MuiTypography-root"
        data-testid="typography"
      >
        Choose the closest to your roof shape
      </p>
      <div
        class="content"
      >
        <div>
          <p>
            This is the Selecting a Roof Shape page.
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth hr css-9mgopn-MuiDivider-root"
      />
      <div
        class="footer breakableRow breakableRow--reverse"
      >
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium rowItem css-1ga0prt-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ArrowBackIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Go Back
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="breakableRow"
        >
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium rowItem css-1r6mhvx-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Skip
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium rowItem css-11nrv4h-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="submit"
          >
            Calculate
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
